testsuite/tests/lkt/import/invalid/common.lkt
from lexer_example import foo_lexer

dynvar myvar: Int

class FooNode implements Node[FooNode] {
}
